--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>John's Personal Site</title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
+
     <body>
         <table>
             <tr>
-                <td><img src="john.jpg" alt="John profile picture" width="150" height="150"></td>
+                <td><img src="images/john.jpg" alt="John profile picture" width="150" height="150"></td>
                 <td>
                     <h1>John Sandström</h1>
                     <p><em>Software engineer at <strong>Combitech</strong></em></p>
@@ -15,7 +17,6 @@
                 </td>
             </tr>
         </table>
-        
         <hr>
         <h3>Work Experience</h3>
         <table cellspacing="10">
