--- a/part-one/index.html
+++ b/part-one/index.html
@@ -9,9 +9,9 @@
     <body>
         <table>
             <tr>
-                <td><img src="images/john.jpg" alt="John profile picture" width="150" height="150"></td>
+                <td><img class="profile-pic" src="images/john.jpg" alt="John profile picture" width="150" height="150"></td>
                 <td>
-                    <h1>John Sandström</h1>
+                    <h1 id="heading">John Sandström</h1>
                     <p><em>Software engineer at <strong>Combitech</strong></em></p>
                     <p>I am a software engineer with a bachelor's degree in computer science from <a href="https://www.oru.se/"> Örebro University</a></p>
                 </td>
@@ -48,7 +48,7 @@
                 </tr>
                 <tr>
                     <td>C#</td>
-                    <td>🌟🌟</td>
+                    <td>🌟🌟</td> 
                 </tr>
                 <tr>
                     <td>Python</td>
