--- a/CSS-MySite/index.html
+++ b/CSS-MySite/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <title>John Sandström</title>
     <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
-    
+    <div class="top-container">
+        
+        <h1>I'm John.</h1>
+        <p>a programmer.</p>
+    </div>
+    <div class="middle-container">
+
+    </div>
+    <div class="bottom-container">
+
+    </div>
 </body>
 </html>
