--- a/CSS-MySite/index.html
+++ b/CSS-MySite/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <div class="top-container">
-        
+        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
         <h1>I'm John.</h1>
-        <p>a programmer.</p>
+        <p>a <span class="pro">pro</span>grammer.</p>
+        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+        <img src="images/mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
 
