--- a/TinDog-Start/index.html
+++ b/TinDog-Start/index.html
@@ -8,10 +8,8 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
-
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css"
     integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
@@ -41,12 +39,29 @@
       <!-- Nav Bar -->
 
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="">tindog</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        <div class="title_row">
+          <h1 class="big-heading">John & Tias Bröllop</h1>
+          <h2 class="heading-date">2022 - 10 - 29</h3>
+        </div>
+      </nav>
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="title_navbar">
+
+
+            <a class="navbar-brand" href="">Hem</a>
+            <a class="navbar-brand" href="#footer">Osa</a>
+            <a class="navbar-brand" href="#footer">Sovplats</a>
+            <a class="navbar-brand" href="#pricing">Hålla Tal</a>
+            <a class="navbar-brand" href="#cta">Gåva</a>
+
+        </div>
+      </nav>
+
+        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        </button> -->
+        <!-- <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link" href="#footer">Contact</a>
@@ -58,24 +73,12 @@
               <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
-        </div>
-      </nav>
+        </div> -->
 
 
       <!-- Title -->
 
-      <div class="row">
-        <div class="col-lg-6">
-          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
-          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>
-            Download</button>
-          <button type="button" class="btn btn-light btn-lg download-button"><i class="fab fa-google-play"></i>
-            Download</button>
-        </div>
-        <div class="col-lg-6">
-          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
-        </div>
-      </div>
+
     </div>
   </section>
 
